# newsletter-agent

./: CHANGELOG.md  Dockerfile  README.md  config_schema.json  docker-compose.yaml  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: build.yml  docker.yml
src/daily_update_agent/: agent.py  interesting_article_agent.py  main.py  summary_agent.py
src/daily_update_agent/models/: article.py
src/daily_update_agent/repositories/: article_repository.py  dal.py
src/newsletter_agent/: agent.py  config.py  config_schema.py  logger.py  main.py  relevant_article_agent.py  scrape.py  summary_agent.py
src/newsletter_agent/repositories/: article_repository.py  dal.py
